janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__slurp_forward_into_an_array_past_a_comment.snap
---
source: src/editing/paredit/tests.rs
expression: "@[a|] # x\n b"
---
----- BEFORE ACTION
@[a] # x
   ↑
 b

----- AFTER ACTION: Slurp forward
@[a # x
 b]
