janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__slurp_forward_past_a_comment.snap
---
source: src/editing/paredit/tests.rs
expression: "(|) # keep\n x"
---
----- BEFORE ACTION
() # keep
 ↑
 x

----- AFTER ACTION: Slurp forward
( # keep
 x)
