janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__splice_keeps_forms_apart.snap
---
source: src/editing/paredit/tests.rs
expression: "(a[b| c]d)"
---
----- BEFORE ACTION
(a[b c]d)
    ↑

----- AFTER ACTION: Splice
(a b c d)
