janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__wrap_a_selection.snap
---
source: src/editing/paredit/tests.rs
expression: (<a b> c)
---
----- BEFORE ACTION
(a b c)
 ▔▔▔

----- AFTER ACTION: Wrap with ( )
((a b) c)
