janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__wrap_keeps_the_quote_inside.snap
---
source: src/editing/paredit/tests.rs
expression: "(a '|b)"
---
----- BEFORE ACTION
(a 'b)
    ↑

----- AFTER ACTION: Wrap with [ ]
(a ['b])
