janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__wrap_one_form_in_a_struct.snap
---
source: janet-lsp-plus/src/editing/paredit/tests.rs
expression: (f |x)
---
----- BEFORE ACTION
(f x)
   ↑

----- AFTER ACTION: Wrap with { }
(f {x})
